# FR-Rendering-101

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: CompileShaders.cmake  DX12AgilitySDK.cmake  DX12Shaders.cmake  WindowsPix.cmake
shaders/: TrianglePixelShader.hlsl  TriangleVertexShader.hlsl
src/: main.cpp
src/Application/: Application.cpp  Application.h  ApplicationWindowProperties.h
src/Application/Window/: ApplicationWindow.cpp  ApplicationWindow.h
src/Core/: Application.cpp  Application.h  BaseObject.h  CoreObject.h  ObjectUseCustomAllocatorMixin.h  Window.cpp  Window.h  WindowProperties.h
src/Diagnostics/: Logger.h
src/Entities/: TriangleEntity.cpp  TriangleEntity.h
src/Graphics/DirectX12/: AgilitySDK.cpp  AgilitySDK.h  FrameMetadata.h  Renderer.cpp  Renderer.h  ResourcesInitializationMetadata.h  Tools.h  Vertex.h
src/Platform/: Generic.h  MemoryStatistics.cpp  MemoryStatistics.h  Platform.h
src/Platform/Windows/: Entrypoint.h  Memory.cpp  Memory.h  MemoryAllocator.cpp  MemoryAllocator.h  OS.h  Std.h  Types.h  Windows.h
src/Renderer/DirectX12/: DirectX12Tools.h  RendererDirectX12.cpp  RendererDirectX12.h  Vertex.h
src/Scene/: DefaultSceneGraphFactory.h  IEntity.h  SceneGraph.h  SceneNode.h
src/Scene/Entities/: TriangleEntity.cpp  TriangleEntity.h
